--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,14 @@
 			<artifactId>twilio</artifactId>
 			<version>8.7.0</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.18.18</version>
+			<scope>provided</scope>
+		</dependency>
+
 	</dependencies>
 
 	<build>
